ci(release): setup more secure and stable download of JS deps
The initial motivation of this change has been the compliance with OpenSSF. The JavaScript dependencies downloaded through `npm` were not pinned with hash, leading to a potential toolchain security vulnerability.

A limitation with the npm CLI has been encountered: it is not possible to pin dependencies with hash value for checksum through commands. The only way to resolve the vulnerability is to rely on a `package-lock.json` file, generated based on the `package.json` one when executing the `npm install` command.

In order to ensure clean setup (especially in localdev), the engine & package manager versions has been specified in the `package.json` file (NodeJS v20.11.0 and npm v10.2.4). The `.npmrc` file has been added in order to enforce usage of a supported engine version by setting the `engine-strict` option to `true` (`false` by default). More details about the `.npmrc` file can be found in the npm documentation: https://docs.npmjs.com/cli/v10/configuring-npm/npmrc.

The workflows have been adapted accordingly. Moreover, cache mechanism has been activated in order to improve jobs performances. A cache entry will be persisted in GitHub with the following naming convention: `npm-<hash-package-lock-json-file>`, meaning that the cache will be reusable as long as the `package-lock.json` file's content remains unchanged.

Always in the GitHub Actions workflows, the calls to the `commitlint` and `semantic-release` CLIs are now done through `npx` one since this is a convenient solution for retrieving and executing the binaries stored in the project's `node_modules` folder. This wasn't required until now since dependencies were installed globally.

Dependencies are no longer installed globally since it has been decided to replace the `npm install --global` call to the `npm clean-install` one which doesn't support global installations (unfortunately). Hence the use of `npx` instead. Relying on `npm clean-insta

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -11,21 +11,5 @@
   },
   "osvVulnerabilityAlerts": true,
   "semanticCommits": "enabled",
-  "semanticCommitType": "build",
-  "customManagers": [
-    {
-      "customType": "regex",
-      "description": "semantic-release dependencies",
-      "fileMatch": ["^\\.github/workflows/[^/]+\\.ya?ml$"],
-      "matchStrings": ["(?<depName>[@]?semantic-release.*)@(?<currentValue>[^\\s]*)"],
-      "datasourceTemplate": "npm"
-    },
-    {
-      "customType": "regex",
-      "description": "commitlint dependencies",
-      "fileMatch": ["^\\.github/workflows/[^/]+\\.ya?ml$"],
-      "matchStrings": ["(?<depName>@commitlint/.*)@(?<currentValue>[^\\s]*)"],
-      "datasourceTemplate": "npm"
-    }
-  ]
+  "semanticCommitType": "build"
 }
